# discrete-mathematics

./: README.md
.github/workflows/: astro.yml
assignments/project1/: README.md
assignments/project1/logic-parser/: Cargo.toml  README.md
assignments/project1/logic-parser-wasm/: Cargo.toml  README.md  build.sh  setup.sh
assignments/project1/logic-parser/src/: errors.rs
assignments/project1/logic-parser/src/lexing/: helpers.rs  mod.rs  token.rs
assignments/project1/logic-parser/src/parsing/: node.rs  parser.rs
assignments/project2/scrapper/: .gitignore  tsconfig.json
assignments/project2/scrapper/src/: config.ts  utils.ts
assignments/project2/server/: dropdb.sh  manage.py  requirements.txt
assignments/project2/server/.playground/: creating_records.py  load.py
assignments/project2/server/records/: models.py  serializers.py  urls.py  views.py
assignments/project2/server/vennbase/: settings.py  urls.py
assignments/project2/server/venndriver/: protocol.py
assignments/project3/interlinker/: Cargo.toml  README.md
assignments/project3/interlinker/src/: handlers.rs  main.rs  ws.rs
assignments/week1/: README.md
assignments/week1/logic-parser/: Cargo.toml  README.md  foo.txt
assignments/week1/logic-parser-wasm/: .gitignore  Cargo.toml  build.sh  index.html  publish.sh  setup.sh  web_preview.sh
assignments/week1/logic-parser-wasm/src/: lib.rs
assignments/week1/logic-parser-wasm/www/: index.html
assignments/week1/logic-parser/notes/: notes.xopp
assignments/week1/logic-parser/src/: codemap.rs  errors.rs  lexer.rs  lib.rs  main.rs  parser.rs
assignments/week1/logic-parser/src/image_generation/: render.rs
assignments/week1/logic-parser/src/lexing/: lexer.rs  token.rs
assignments/week1/logic-parser/src/parsing/: errors.rs  lexer.rs  mod.rs  node.rs  parser.rs
assignments/week1/logic-parser/src/svg_generation/: mod.rs  render.rs  svg.rs
assignments/week2/: .env.example  .gitignore  README.md
assignments/week2/scrapper/: package-lock.json  package.json
assignments/week2/scrapper/scripts/: push_records.py
assignments/week2/scrapper/src/: main.ts
assignments/week2/server/: .env.example  requirements.txt
assignments/week2/server/.playground/: creating_records.py  getting_a_record.py  testing_many_to_many.py
assignments/week2/server/api/: urls.py  views.py
assignments/week2/server/records/: models.py  serializers.py  urls.py  views.py
assignments/week2/server/records/migrations/: 0001_initial.py  0002_rename_record_id_record_vennbase_id_and_more.py
assignments/week2/server/vennbase/: asgi.py  settings.py  urls.py  wsgi.py
assignments/week2/server/venndriver/: connection.py  protocol.py
assignments/week3/interlinker/: Cargo.toml
assignments/week3/interlinker/src/: client.rs  main.rs  utils.rs  ws.rs
frontend/: .env  .gitignore  astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: types.ts
frontend/src/components/: Header.astro  Link.astro  LogicParser.tsx  SVGRender.tsx  WeekItem.astro
frontend/src/components/Interlinker/: main.ts  utils.ts
frontend/src/components/LogicParser/: LogicParser.tsx  analize.ts  generateTable.ts  tokenize.ts
frontend/src/components/Vennbase/: DataTable.tsx  QueryResultGraph.tsx  QuerySection.tsx  Vennbase.tsx  VennbaseStatus.tsx  fetching.ts
frontend/src/layouts/: Layout.astro  ProjectLayout.astro  WeekLayout.astro
frontend/src/pages/: about.astro  index.astro
frontend/src/pages/assignments/: week1.astro  week2.astro  week3.astro
frontend/src/pages/project/: 1.astro  2.astro  3.astro
