[package]
name = "logic-parsers"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/ashleygwilliams/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
logic-parser = { path = "../logic-parser" }
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.105"

[dev-dependencies]
assert_json = "0.1.0"
wasm-bindgen-test = "0.3.26"
