[package]
name = "logic-parsers"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["@paoloose"]
description = "Wasm glue for the logic-parser rust library (personal use)"
repository = "https://github.com/paoloose/discrete-mathematics"

[lib]
crate-type = ["cdylib"]

[dependencies]
logic-parser = { path = "../logic-parser", features = ["svg-generation", "serde"] }
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"
serde_json = "1.0.105"
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"

[dev-dependencies]
assert_json = "0.1.0"
wasm-bindgen-test = "0.3.26"
