[package]
name = "logic-parser"
version = "0.1.0"
edition = "2021"

[lib]
name = "logic_parser"
crate-type = ["lib"]

[features]
default = []
image-generation = ["dep:imageproc", "dep:image", "dep:rusttype"]
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
thiserror = "1.0.47"
# Image generation with `image` and `imageproc`
imageproc = { version = "0.23.0", default-features = false, optional = true }
rusttype = { version = "0.9.3", optional = true }
# Optional serialization and deseralization for the ASTNode
serde = { version = "1.0.188", optional = true, features = ["derive"] }
serde_json = { version = "1.0.105", optional = true }

[dependencies.image]
version = "0.24.7"
optional = true
default-features = false
features = ["png"]

[dev-dependencies]
assert_json = "0.1.0"
