[package]
name = "logic-parser"
version = "1.2.0"
description = "A simple lexer & parser for logical expressions that supports output as AST, JSON and SVG"
edition = "2021"
homepage = "https://github.com/paoloose/discrete-mathematics/tree/main/assignments/week1/logic-parser"
repository = "https://github.com/paoloose/discrete-mathematics/tree/main/assignments/week1/logic-parser"
readme = "README.md"
keywords = ["parser", "ast-parser", "logic"]
license = "MIT OR GPL-2.0-or-later"
exclude = ["assets/*", "notes/*"]

[lib]
name = "logic_parser"
crate-type = ["lib"]

[features]
default = []
svg-generation = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies]
thiserror = "1.0.47"
# Optional serialization and deseralization for the ASTNode
serde = { version = "1.0.188", optional = true, features = ["derive"] }
serde_json = { version = "1.0.105", optional = true }

[dev-dependencies]
assert_json = "0.1.0"
