[package]
name = "interlinker"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3.6"
tokio = {version = "1.34.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde_json = "1.0.108"
serde = {version = "1.0.192", features = ["derive"] }
futures = { version = "0.3.29", default-features = false }
uuid = { version = "1.5", features = ["serde", "v4"] }
reqwest = "0.11.22"
quick-xml = { version = "0.31.0", features = ["async-tokio"] }
